# custom-sl

./: .gitattributes  .gitignore  Cargo.toml  README.md  alphabet.py  alphabet5.py  build.rs  justfile  main.py  pyproject.toml
font8x8-rs/: CHANGELOG.md  Cargo.toml  README.md
font8x8-rs/src/: unicode.rs
src/: alphabet-large.json  alphabet-small.json  main.rs  prepare_text.rs  safe_print.rs
